# KIT_ProjectExII_CPU_Simulator

./: .gitignore  CMakeLists.txt  cpuboard.c  cpuboard.h  main.c
Operation/: ADC.c  ADC.h  ADD.c  ADD.h  AND.c  AND.h  BBC.c  BBC.h  CMP.c  CMP.h  CMakeLists.txt  EOR.c  EOR.h  IN.c  IN.h  JAL.c  JAL.h  JR.c  JR.h  LD.c  LD.h  OR.c  OR.h  OUT.c  OUT.h  RCF.c  RCF.h  RSM.c  RSM.h  SBC.c  SBC.h  SCF.c  SCF.h  SSM.c  SSM.h  ST.c  ST.h  SUB.c  SUB.h
